go-micro/Go-Micro-on-Kubernetes/03-deploy-helloworld.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: micro
  labels:
    project: micro
    micro: service
    name: helloworld
    version: latest
spec:
  selector:
    matchLabels:
      micro: service
      name: helloworld
      version: latest
  template:
    metadata:
      labels:
        project: micro
        micro: service
        name: helloworld
        version: latest
    spec:
      tolerations:
        - key: "project"
          operator: "Equal"
          value: "micro"
          effect: "NoSchedule"
      containers:
      - name: helloworld
        image: jmrobles/micro-helloworld
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: micro
spec:
  selector:
    micro: service
    name: helloworld
    version: latest
  ports:
  - port: 8080
    targetPort: 8080
